Fix SonarQube issues.